Update packages and security

--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "@skele/components": "^1.0.0-alpha.29",
-    "expo": "^28.0.0",
+    "expo": "^32.0.0",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "moment": "^2.23.0",
-    "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-ui-kitten": "^3.1.2",
-    "react-navigation": "2.3.1"
+    "react-navigation": "2.3.1",
+    "lodash": ">=4.17.11",
+    "merge": ">=1.2.1"
   },
   "devDependencies": {
     "jest-expo": "^28.0.0"
